lab1/Test/L1-A-10-39.output
Error Type A at Line 4
Error Type B at Line 10
Error Type B at Line 39
Error Type B at Line 42
