lab1/Test/L1-A-10-39.cmm
struct Zg3MkKG6_tIRwgV_1Q4L ;
float hdLeEY7hUYy6 ( ) {
  int dbolN414pgS6 = lRSK51Oq7lDp5P81rnz ;
&  if ( ec15QnbRf )   if ( aEc2cEDOhNb )   return 
    C0lm9sJQbytikZs1aowm ;
else   while ( u2aPDBslmQabRRT )   XwKEk = eo || FIyLIYN7 
    != iXMDHtO * - CpMIK ( fuRmHbOz0yo8yQMmz , RXHxIEavv 
    && FK < v + ! K [ SlW86M = - TJOQZX ( rx9i4S8f5 = 
    s_B = AE_VoeD9BC && bo6rn_dGptJSt <= WN4iOuMmK3L4 
    [ WZVFuj5 || if SwaUD == mI7x_NFE5o + - - - ( KjBwKhtVKVBkQqT 
    > zAkitEZ2Q0_ii_z [ _uc8RenIAte3 = IppO98 >= XAF3yWg_Vr 
    + - _QUD1aCQ_UK ( aLErflY4VrR8EW == - EmjB9zWQhbGevuhYD_RE 
    ) ] . GkNkHpKKyu ) ] + 722223958.2112579301 ) . w_4JS8f6 
    ] - 184629081 / ! I_WHbfWcdnBkf ( ) ) ;



}
int D , h9zxrXygb9ZEhQ [ 135424670 ] 

;
int ;
int Stsc ( struct zmYR6cjRnf {
  struct YuQExoW h6Rd_Afrv2X0TnJz4m5W ;
}OiQZZu6Y7z , int tEyJ39nktb6ifrO3aIEu ) {
  if ( zhOig )   while ( uy58pyb75x0iPy7vU )   if 
    ( fqr5pusb )   if ( GIF0v )   usMlUc ;
else   JI8 ;

else {
    struct a3hdgQ tN7CV2xt9yFXt4 ;
  }

else   if ( bDuH7mniXTBn4BA )   v ;


{
  }}
struct Uzt struct ;
struct {
  struct FIIXfOfaiNECMk6XMMA OaDdz9hyW1_nm , gvgFfflEVPwqzYOc 
    * ;
};
int ;
